--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@ input {
 const PASSWORD = "14july";
 let musicOn = false;
 
-const letterText = `baccha mai efforts kr sakta hu prayer kar sakta hu aur mujhe pata hai kahi na kahi you still love a part of me.
-
-trust me mera baccha bas ek baar aa jao... we are gonna love each other always.
-
-tum mere prathna ka vardan bano aur tumko paa kar mai ek aacha insaan ban jau.
-
+const letterText = `hey baccha i just want us to never give up on each other, yes i may annoy you, and i have made mistakes but i have 
+learnt from that mistake what i have lost in my life ,but bacha loving you was never a mistake. 
+trust me mera baccha bas ek baar aa jao... we are gonna love each other always, i don't wanna lose what is there between us let's build
+the life we always planned together, sach mein baccha let's give love a chance , i want to be by your side always despite all ups and 
+downs. i will always love you forever.
+tum mere prathna ka vardan bano aur tumko paa kar mai ek aacha insaan ban jau, because you are everything to me come home soon baby.
 I miss you baccha... will you be my little Valentine, butkun bacha? 💐
 
 — Yours always, bebu doll orange cat ❤️`;
