--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ input {
   <h2>I love you baccha 💕</h2>
   <p id="letter"></p>
 
-  <button id="revealBtn" class="hidden" onclick="revealPhoto()">Reveal Our Memory 💖</button>
+  <button id="revealBtn" class="hidden" onclick="revealPhoto(us.jpg)">Reveal Our Memory 💖</button>
 
   <!-- 💑 COUPLE PIC HERE -->
   <div class="photo-box" id="photoBox">
