--- a/index.html
+++ b/index.html
@@ -219,8 +219,7 @@ let musicOn = false;
 const letterText = `hey baccha i just want us to never give up on each other, yes i may annoy you, and i have made mistakes but i have 
 learnt from that mistake what i have lost in my life ,but bacha loving you was never a mistake. 
 trust me mera baccha bas ek baar aa jao... we are gonna love each other always, i don't wanna lose what is there between us let's build
-the life we always planned together, sach mein baccha let's give love a chance , i want to be by your side always despite all ups and 
-downs. i will always love you forever.
+the life we always planned together, sach mein baccha let's give love a chance , i want to be by your side always despite all ups and downs. i will always love you forever.
 tum mere prathna ka vardan bano aur tumko paa kar mai ek aacha insaan ban jau, because you are everything to me come home soon baby.
 I miss you baccha... will you be my little Valentine, butkun bacha? 💐
 
@@ -278,7 +277,7 @@ function typeWriter() {
 }
 
 function revealPhoto() {
-  photoBox.classList.add("show");
+  photoBox.classList.add("us.jpg");
 }
 
 function createHearts() {
