Fix typos and enhance letter text
Corrected typos and improved text clarity in letter.

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@ let musicOn = false;
 const letterText = `baccha mai efforts kr sakta hu prayer kar sakta hu aur mujhe pata hai kahi na kahi you still love a part of me.
  mera baccha bas ek baar aa jao, i just want us to never give up on each other, i may annoy you and  have made mistake but losing 
 you has shown me how my life can be without us being together forever, baccha despite all ups and downs  want to be the man who 
-is gonna stand next to you supporting you, seeing you accomplish everything that we jave always planned.
-tum mere prathna ka vardan bano aur tumko paa kar mai ek aacha insaan ban jau baccha, I love you ore than you know cuty.
+is gonna stand next to you supporting you, seeing you accomplish everything that we have always planned.
+tum mere prathna ka vardan bano aur tumko paa kar mai ek aacha insaan ban jau baccha, I love you more than you know cuty.
 Come home soon baby, aur i want to be with you the day when it all started 14th feb. 
 I miss you baccha... will you be my little Valentine, Awantika bhardwaj?💐
-
+I love you always and forever ♾️.
 — Yours always, bebu doll orange cat ❤️`;
 
 function toggleMusic() {
